--- a/package.json
+++ b/package.json
@@ -5,11 +5,22 @@
   "main": "index.js",
   "scripts": {
     "dev": "vuepress dev docs",
-    "build": "vuepress build docs"
+    "build": "vuepress build docs",
+    "precommit": "lint-staged",
+    "lint": "prettier --write"
   },
-  "author": "",
+  "lint-staged": {
+    "*.{js,json,css,md.vue}": [
+      "prettier --write",
+      "git add"
+    ]
+  },
+  "author": "PanJiaChen",
   "license": "ISC",
   "devDependencies": {
-    "vuepress": "^0.10.0"
+    "prettier": "1.13.7",
+    "vuepress": "^0.10.0",
+    "husky": "0.14.3",
+    "lint-staged": "7.2.0"
   }
 }
