--- a/package.json
+++ b/package.json
@@ -15,12 +15,16 @@
       "git add"
     ]
   },
+  "prettier": {
+    "semi": false,
+    "singleQuote": true
+  },
   "author": "PanJiaChen",
   "license": "ISC",
   "devDependencies": {
-    "prettier": "1.13.7",
-    "vuepress": "^0.10.0",
+    "prettier": "1.14.2",
+    "vuepress": "^0.14.2",
     "husky": "0.14.3",
-    "lint-staged": "7.2.0"
+    "lint-staged": "7.2.2"
   }
 }
