--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "vuepress": "0.14.4",
     "husky": "0.14.3",
     "lint-staged": "7.2.2"
+  },
+  "dependencies": {
+    "axios": "0.18.0"
   }
 }
