--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "lint-staged": "7.2.2"
   },
   "dependencies": {
-    "axios": "0.18.0"
+    "axios": "0.18.0",
+    "webpack-dev-middleware": "^3.6.0"
   }
 }
