--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -6,9 +6,6 @@ on:
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
-    strategy:
-        matrix:
-         node-version: [16.x]
     steps:
       - name: Checkout 🛎️
         uses: actions/checkout@v2.3.1
@@ -23,3 +20,4 @@ jobs:
         with:
           branch: gh-pages # The branch the action should deploy to.
           folder: docs/.vuepress/dist
+          node-version: 16.x
